Fix spacing issue with call to action button.

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,8 @@ button {
     border-radius: 10px;
     align-items: center;
     justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 50px;
 
 
 }
